--- a/app/scss/components/_product.scss
+++ b/app/scss/components/_product.scss
@@ -69,7 +69,7 @@
   }
 
   &__link {
-    color: $accentCyan;
+    color: darken($accentCyan, 10%);
     text-decoration: none;
     padding-bottom: 0.5rem;
     position: relative;
